# isay

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
isay/: cli.py  tools.py
tests/: test_say.py
