[tool.poetry]
name = "isay"
version = "0.1.0"
description = ""
authors = ["Victor-Nicolae Savu <2445711+Victor-Savu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.2"

[tool.poetry.scripts]
isay = "isay.cli:main"

[tool.sys.alpine3-11.dev-dependencies]
gcc = "9.2.0-r4"
musl-dev = "1.1.24-r2"
libffi-dev = "3.2.1-r6"
openssl-dev = "1.1.1g-r0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
